_sass/_main.scss
// Main style definitions

.global-nav {
    border-bottom: 1px solid lighten($global-secondary-background, 25);

    .uk-logo {
        height: 1.9rem;
        padding-right: 20px;
    }

    .uk-navbar-nav li:first-child > a {
        padding-left: 0;
    }

    .uk-navbar-nav li:last-child > a {
        padding-right: 0;
    }
}

.uk-navbar-nav {
    & > li > a {
        .uk-light & {
            color: rgba(255, 255, 255, .75);

            &:hover, &:focus, &.uk-open[aria-expanded] {
                color: #fff;
            }
        }
    }

    & > .nav-group-start {
        padding-left: 2.3 * $navbar-nav-item-padding-horizontal;
    }

    & > .uk-active > a {
        color: #fff;
    }

    & > li [data-uk-icon] {
        color: rgba(255, 255, 255, .9);
        margin-left: 3px;
        margin-right: -5px;
    }
}

.uk-navbar-dropdown {
    background-color: $global-muted-background;

    a {
        font-size: 1rem;
    }

    a:hover, a:focus {
        text-decoration: underline;
    }
}

.uk-navbar-dropdown-grid div:first-child ul {
    padding-left: 2 * $padding-small-padding;
}

.nav-left-open-category {
    background-color: $global-background;
    padding: $list-margin-top $padding-small-padding $list-margin-top 2 * $padding-small-padding;
    margin-left: -$padding-small-padding * 2;
    margin-right: -$padding-small-padding * 2;
    border: 1px solid $global-border;
    z-index: 1000;
    position: relative;
    border-left: none;
    border-right: 0;
    font-size: 1rem;

    &:after /*, &:before */ {
        content: " ";
        display: block;
        height: 0;
        width: 0;
        border-left: floor(($global-line-height * 16px + $list-margin-top) / 2) + 1 solid $global-background;
        border-top: floor(($global-line-height * 16px + $list-margin-top) / 2) + 1 solid transparent;
        border-bottom: floor(($global-line-height * 16px + $list-margin-top) / 2) + 1 solid transparent;
        position: absolute;
        top: 0;
        right: -($padding-small-padding) - 1;
    }

    // comment in for triangle in navigation
    //&:before {
    //    border-left: floor(($global-line-height * 16px + $list-margin-top) / 2) + 2 solid $global-border;
    //    border-top: floor(($global-line-height * 16px + $list-margin-top) / 2) + 2 solid transparent;
    //    border-bottom: floor(($global-line-height * 16px + $list-margin-top) / 2) + 2 solid transparent;
    //    top: -1px;
    //    right: -($padding-small-padding) - 2;
    //}
}

.nav-right-open-sub {
    background-color: $global-background;
    margin-left: -$padding-small-padding;
    padding-left: 2 * $padding-small-padding;
}

.uk-navbar-nav > li > a {
    font-size: 1.02rem;
}

.uk-offcanvas-bar .uk-nav-primary > li {
    & > a {
        font-size: 1.4rem;
    }

    .uk-nav-sub li {
        font-size: 1.1rem;
    }
}

// Scroll fix for anchors
a:target {
    display: block;
    position: relative;
    top: -$navbar-nav-item-height;
    visibility: hidden;
}

.uk-navbar-dropdown-nav > li > a {
    color: $global-color;
}

[class*='uk-navbar-dropdown-bottom'] {
    margin-top: 1px;
}

.section-header {
    text-transform: $section-header-text-transform;
}

.search-engine-icon {
    width: 42px;
    height: 42px;
    padding-top: .35em;
}


.search-engines {
    h5 {
        margin-bottom: 0;
    }
}

.footer-section {
    margin-bottom: 0;
    padding-bottom: $global-gutter;

    @extend .uk-text-small;
    @extend .uk-text-muted;

    a {
        @extend .uk-text-muted;
    }

    a:hover, a:focus {
        text-decoration: underline;
    }

    .uk-nav a {
        padding-top: 2px;
    }
}

@media (min-width: $breakpoint-medium) {
    .footer-link-column {
        max-width: 13rem;
        min-width: 11rem;
    }

    .footer-link-column .uk-nav-header {
        min-height: 3em;
    }
}

@media (min-width: $breakpoint-large) {
    .uk-margin-large-left\@l {
        margin-left: $margin-large-margin !important;
    }
}

@media (min-width: $breakpoint-xlarge) {
    .uk-margin-large-left\@xl {
        margin-left: $margin-large-margin !important;
    }
}

